epoch_derive/tests/compile-fail/event_data/schema_version_int_vs_string.rs
// This should compile to ERROR - schema_version must be an integer, not a string
#[event_data(schema_version = "not_an_int")]
pub enum MalformedSchemaVersionEvent { A }